--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.1",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "sonner": "^1.4.41",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
